--- a/BTTH/TH1/B1/public/Admin/style.css
+++ b/BTTH/TH1/B1/public/Admin/style.css
@@ -1,52 +1,40 @@
-/* style.css */
-body {
-    font-family: Arial, sans-serif;
-    margin: 0;
-    padding: 0;
-    background-color: #f8f9fa;
-    color: #333;
+table {
+    width: 150%;
+    margin-top: 20px;
+    border-collapse: collapse;
 }
 
-h1 {
-    text-align: center;
-    padding: 20px;
-    background-color: #4CAF50;
-    color: white;
-    margin: 0;
-}
-
-.container {
-    display: flex;
-    flex-wrap: wrap;
-    justify-content: center;
-    gap: 20px;
-    padding: 20px;
-}
-
-.card {
-    background-color: white;
+table, th, td {
     border: 1px solid #ddd;
-    border-radius: 8px;
-    width: 300px;
-    box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
-    overflow: hidden;
+
+}
+table, th, td, img{
+    width: 100px;
+    height: auto;
+    object-fit: cover;
+    aspect-ratio: 4/3;
+}
+th, td {
+    padding: 10px;
     text-align: center;
 }
 
-.card img {
-    max-width: 100%;
-    height: auto;
-    border-bottom: 1px solid #ddd;
+table, th, td .flower_manager_desc{
+    width: 200px;
+    overflow: hidden;
+    white-space: nowrap; 
+    text-overflow: ellipsis;
 }
 
-.card p {
-    margin: 10px;
-    font-size: 16px;
-    line-height: 1.5;
+.table > tbody > tr > td {
+    vertical-align: middle; /* Căn giữa nội dung theo chiều dọc */
 }
 
-.card p:first-child {
-    font-weight: bold;
-    font-size: 18px;
-    color: #4CAF50;
+.footer{
+    padding: 30px 0 30px 0;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    background: #D7F9FA;
+    color: black;
 }
