--- a/BTVN/assets/style.css
+++ b/BTVN/assets/style.css
@@ -1,4 +1,4 @@
-/* File: assets/css/style.css */
+
 
 /* Định dạng chung cho body */
 body {
@@ -92,7 +92,7 @@ button:hover {
 }
 
 
-/* File: assets/css/style.css */
+
 
 /* Separator line */
 .separator {
@@ -101,7 +101,7 @@ button:hover {
     margin: 20px 0;
 }
 
-/* Footer styling */
+/* Footer s*/
 footer {
     text-align: center;
     padding: 20px;
@@ -111,7 +111,7 @@ footer {
     font-weight: bold;
 }
 
-/* General styling */
+/* General */
 body {
     font-family: Arial, sans-serif;
     margin: 0;
@@ -119,7 +119,7 @@ body {
     background-color: #f4f4f9;
 }
 
-/* Header styling */
+/* Header s */
 header {
     display: flex;
     align-items: center;
