--- a/BTVN/assets/style.css
+++ b/BTVN/assets/style.css
@@ -1,5 +1,3 @@
-
-
 /* Định dạng chung cho body */
 body {
     font-family: Arial, sans-serif;
@@ -91,9 +89,6 @@ button:hover {
     background-color: #218838;
 }
 
-
-
-
 /* Separator line */
 .separator {
     height: 2px;
@@ -101,7 +96,7 @@ button:hover {
     margin: 20px 0;
 }
 
-/* Footer s*/
+/* Footer */
 footer {
     text-align: center;
     padding: 20px;
@@ -111,15 +106,7 @@ footer {
     font-weight: bold;
 }
 
-/* General */
-body {
-    font-family: Arial, sans-serif;
-    margin: 0;
-    padding: 0;
-    background-color: #f4f4f9;
-}
-
-/* Header s */
+/* Header */
 header {
     display: flex;
     align-items: center;
